--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "hbs": "^4.2.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11"
   }
 }
